fixed link wrapping on smaller screens

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 a {
